--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-
+    "canvg": "^3.0.7",
     "d3": "^7.0.0",
     "dom-to-image": "^2.6.0",
-    
+    "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.6.0",
     "jspdf": "^2.3.1",
-   
+    "jspdf-html2canvas": "^1.4.9",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-date-range": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-to-pdf": "^0.0.14",
-   
+    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
